src/test/ui/block-result/block-must-not-have-result-while.stderr
warning: denote infinite loops with `loop { ... }`
  --> $DIR/block-must-not-have-result-while.rs:2:5
   |
LL |     while true {
   |     ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-while.rs:3:9
   |
LL | /     while true {
LL | |         true
   | |         ^^^^ expected `()`, found `bool`
LL | |
LL | |     }
   | |     -- help: consider using a semicolon here
   | |_____|
   |       expected this to be `()`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
